..F....... [ZBXNEXT-2662] More small mixin and search box optimisations ..F....... [ZBXNEXT-2662] Added some initial styles for sign in page. Added new mixin for css box-sizing. ..F....... [ZBXNEXT-2662] Styles for sign in page. Added collapsed widget state to dashboard. ..F....... [ZBXNEXT-2662] Padding and alignment of header icons and search box. Minor padding enhancements across the whole UI. ..F....... [ZBXNEXT-2662] Deleted duplicate ico ..F....... [ZBXNEXT-2662] Some initial styling for pop-ups ..F....... [ZBXNEXT-2662] Further pop-up styling and new variables for trigger severities ..F....... [ZBXNEXT-2662] Added action buttons and check boxes to pop-ups ..F....... [ZBXNEXT-2662] Small select button alignment fix in forms. Started adding forms to overlays for map editor, etc. ..F....... [ZBXNEXT-2662] Removed unnecessary elements attached to css selectors ..F....... [ZBXNEXT-2662] Some minor sass code optimizations; forms in overlays. ..F....... [ZBXNEXT-2662] Forms in overlays; some minor enhancements ..F....... [ZBXNEXT-2662] New class for overlay dialogs; changes in action menu style and structure; table filtering arrow's positioning fix ..F....... [ZBXNEXT-2662] Minor enhancements to status links, paging, form buttons
git-svn-id: svn://svn.zabbix.com/branches/dev@53119 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-2662-alt/sass/stylesheets/sass/_variables.scss
+++ b/ZBXNEXT-2662-alt/sass/stylesheets/sass/_variables.scss
@@ -8,13 +8,13 @@ $underline-color: #d0d4d9;
 
 // LINK COLORS
 $link-color: #3071ab; // Blue
-$link-hover-color: #3b8bd1; // Light Blue
-$link-active-color: #3b8bd1; // Light Blue
+$link-hover-color: #3071ab; // Blue
+$link-active-color: #3071ab;// // Blue
 $link-visited-color: #3071ab; // Blue
 
 $link-alt-color: #4f86a8; // Alt Blue
-$link-alt-hover-color: #3b8bd1; // Alt Light Blue
-$link-alt-active-color: #3b8bd1; // Alt Light Blue
+$link-alt-hover-color: #4f86a8; // Alt Blue
+$link-alt-active-color: #4f86a8; // Alt Blue
 $link-alt-visited-color: #4f86a8; // Alt Blue
 
 $link-topnav-color: #bfdbea; // Nav Light Blue
@@ -49,6 +49,10 @@ $alert-red-bg-color: #f2dede; // Light Red
 $alert-red-border-color: #ebccd1; // Dark Red
 
 $alert-orange-color: #f37421; // Orange
+$alert-average-bg-color: #fad7c0; // Light Orange
+
+$alert-info-bg-color: #d7edf7;
+$alert-warning-bg-color: #fcf7de; // Light Yellow
 
 $alert-grey-color: #828282; // Alert Grey
 $alert-grey-bg-color: #e0e0e0; // Alert Light Grey 
@@ -140,22 +144,28 @@ $font-transform: uppercase;
 	transition: $arguments;
 }
 
+@mixin box-sizing($box-model) {
+	-webkit-box-sizing: $box-model;
+	-moz-box-sizing: $box-model;
+	box-sizing: $box-model;
+}
+
 @mixin opacity($opacity) {
 	opacity: $opacity;
 	$opacity-ie: $opacity * 100;
 	filter: alpha(opacity=$opacity-ie);
 }
 
-@mixin placeholder {
-	::-webkit-input-placeholder {
-	color: $font-white-color;
-}
+@mixin placeholder($placehldr-color) {
+	&::-webkit-input-placeholder {
+		color: $placehldr-color;
+	}
 
-::-moz-placeholder {
-	color: $font-white-color;
-}
+	&::-moz-placeholder {
+		color: $placehldr-color;
+	}
 
-:-ms-input-placeholder {
-	color: $font-white-color;
-}
+	&:-ms-input-placeholder {
+		color: $placehldr-color;
+	}
 }
